# tla_class

./: .CMakeLists.txt.swp  .main.cpp.swp  CMakeLists.txt  README.md  TLA2024.cpp  TLA2024.h  main  main.cpp  todo.txt
app/: Startup.h  main.cpp
app/config/: IConfigManager.h  JsonConfigManager.h  JsonConfigManager.h.in  config.h
app/core/battery/: battery.cpp  battery.h  test_battery.cpp
app/core/battery_charger/: battery_charger.cpp  battery_charger.h
app/core/tla2024/: TLA2024.cpp  TLA2024.h  test_TLA2024.cpp
app/rc/: RetCode.h
app/utils/: FileUtils.h  Utils.h
battery/: CMakeLists.txt  battery.cpp  battery.h  test_battery.cpp
battery_charger/: battery_charger.cpp  battery_charger.h
config/: JsonConfigManager.h  JsonConfigManager.h.in
debian/bch/etc/bch/: config.json
sensor/: CMakeLists.txt  sensor.cpp  sensor.h  test.cpp
sensor/test_build/: CMakeCache.txt  Makefile  test
temperature_sensor/: CMakeLists.txt  temperature-sensor.cpp  temperature_sensor.cpp  temperature_sensor.h  test_sensor.cpp
temperature_sensor/test_build/: cmake_install.cmake
tla2024/: TLA2024.cpp  TLA2024.h  test_TLA2024.cpp
tla2024_adc1015/: CMakeLists.txt  TLA2024.cpp  TLA2024.h  test_TLA2024.cpp
tla2024_adc1015/test_build/: CMakeCache.txt  Makefile  cmake_install.cmake  test
